--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 <li>I made this amazing and beautiful responsive website using bootstrap this I learned webdesigning while building this project. </li>
                 
                             </ul>
-                            <a href="http://movewithaadi.netlify.app" target="_blank"><button type="button" class="w-100 btn btn-lg btn-dark">Get started</button></a>
+                            <a href="http://movewithaadi.netlify.app" target="_blank"><button type="button" class="w-100 btn btn-lg btn-dark">Go to site</button></a>
                         </div>
                     </div>
                 </div>
