--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./images/1661436676166-removebg-preview-fotor-20230717154859.png" type="image/icon type">
 </head>
 
 <body>
