--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-3 col-sm-12">
-                               <a href="https://instagram.com/rajput_aadi_hr?igshid=MzNlNGNkZWQ4Mg=="> <img href="" src="./images/—Pngtree—instagram icon instagram logo_3584852.png" alt="Instagram" height="50"></a>
+                               <a href="https://instagram.com/rajput_aadi_hr?igshid=MzNlNGNkZWQ4Mg==" target="_blank"> <img href="" src="./images/—Pngtree—instagram icon instagram logo_3584852.png" alt="Instagram" height="50"></a>
                             </div>
                             <div class="col-lg-3 col-sm-12">
-                                <a href="https://twitter.com/rajput_aadi_hr"><img src="./images/logo-twitter-png-5860.png" alt="Twitter" height="50"></a>
+                                <a href="https://twitter.com/rajput_aadi_hr" target="_blank"><img src="./images/logo-twitter-png-5860.png" alt="Twitter" height="50"></a>
                             </div>
                             <div class="col-lg-3 col-sm-12">
-                                <a href="https://github.com/rajputaadi"><img src="./images/pngwing.com.png" alt="Github" height="60"></a>
+                                <a href="https://github.com/rajputaadi" target="_blank"><img src="./images/pngwing.com.png" alt="Github" height="60"></a>
                             </div>
                             <div class="col-lg-3 col-sm-12">
-                                <a href="mailto:rajputaadihr@gmail.com"><img src="./images/pngwing.com (2).png" alt=":LinkedIn" height="50"></a>
+                                <a href="mailto:rajputaadihr@gmail.com" target="_blank"><img src="./images/pngwing.com (2).png" alt=":LinkedIn" height="50"></a>
                             </div>
                         </div>
                     </div>
