--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     </div>
                     <div>
                         <h3 class="fs-2 text-body-emphasis">DSA</h3>
-                        <p>I have hands-on experience in developing web applications using Python frameworks such as
-                            Django and Flask. I can build dynamic and scalable websites by leveraging the power of these
-                            frameworks.</p>
+                        <p>Data Structures and Algorithms (DSA) Skills
+Proficient in Problem Solving
+I have a strong foundation in Data Structures and Algorithms, which enables me to efficiently solve complex problems and optimize solutions. Here are some key skills and competencies</p>
 
                     </div>
                 </div>
